    * `lf_db_save()` and `lf_db_save_file()` have been removed


__Profiles__

New interchangeable lenses:

* Canon EF 35mm f/1.4L II USM
* Canon EF 100-400mm f/4.5-5.6L IS II USM
* Chinon 75-205mm f/3.8
* Chinon Auto 35mm f/2.8
* KMZ Helios-40 85mm f/1.5
* KMZ Industar-50-2 3.5/50
* KMZ Jupiter-37AM MC 3.5/135
* Leica DG Vario-Elmarit 8-18mm f/2.8-4 Asph.
* Leica DG Nocticron 42.5mm f/1.2 Asph. Power OIS
* Nikon AI-S Nikkor 105mm f/2.5
* Nikon AF-S 200-500mm f/5.6E ED VR
* Olympus M.Zuiko Digital 17mm f/1.2
* Olympus M.Zuiko Digital 25mm f/1.2
* Olympus M.Zuiko Digital 45mm f/1.2
* Pentax SMC Takumar 50mm f/1.4
* Sigma 85mm f/1.4 EX DG HSM
* smc Pentax-DA L 18-50mm f/4-5.6 DC WR RE
* Sony FE 24-105mm F4 G OSS;
* Sony FE 50mm F1.8
* Tamron 14-150mm f/3.5-5.8 Di III
* Tamron SP 24-70mm f/2.8 Di VC USD G2 A032
* Tamron SP 70-200mm F/2.8 Di VC USD G2
* Tamron SP 35mm f/1.8 Di VC USD F012
* Voigtländer Super Wide-Heliar 15mm f/4.5 Aspherical III

New compact cameras:

* Canon Powershot G1 X Mark III
* Canon Powershot SX60 HS

Additional/updated data for:

* Canon EF 16-35mm f/4L IS USM
* Canon EF 35mm f/2 IS USM
* Canon EF 50mm f/1.8 STM
* Canon EF-S 10-18mm f/4.5-5.6 IS STM
* Canon EF-S 55-250mm f/4-5.6 IS STM
* KMZ MC Helios-44M-4 58mm 1:2
* KMZ MIR-1B 37mm f/2.8
* Nikon AI-S Nikkor 28mm f/2.8
* Nikon AI-S Nikkor 55mm f/2.8 Micro
* Nikon AF-S Nikkor 24-120mm f/4G ED VR
* Nikon AF Zoom-Nikkor 80-200mm f/2.8D ED
* Nikon Lens Series E 28mm f/2.8
* Nikon Lens Series E 50mm f/1.8
* Olympus M.Zuiko Digital ED 9-18mm f/4.0-5.6
* Olympus M.Zuiko Digital ED 12-100mm f/4.0 IS Pro
* Sigma 17-50mm f/2.8 EX DC HSM
* smc Pentax-D FA Macro 100mm f/2.8 WR

New interchangable lens cameras:

* Nikon D5600
* Olympus PEN E-PL9
* Panasonic DC-G9
* Panasonic DC-GX9
* Sony Alpha 7R III


=======================================
0.3.2 --> 0.3.95 (alpha preview of next release)
=======================================

__NOTE:__ This is an alpha release and snapshot of the current development.