@@ -2109,6 +2109,30 @@
 
     <lens>
         <maker>Panasonic</maker>
+        <model>LEICA DG 10-25/F1.7</model>
+        <model lang="en">Leica DG Vario-Summilux 10-25mm f/1.7 Asph.</model>
+        <mount>Micro 4/3 System</mount>
+        <cropfactor>2.0</cropfactor>
+        <calibration>
+            <distortion model="ptlens" focal="10.0" a="0.012437" b="-0.050968" c="-0.015404" />
+            <distortion model="ptlens" focal="12.0" a="0.005059" b="-0.027192" c="-0.012287" />
+            <distortion model="ptlens" focal="14.0" a="0.000664" b="-0.008187" c="-0.014037" />
+            <distortion model="ptlens" focal="17.0" a="-0.004123" b="0.010819" c="-0.020793" />
+            <distortion model="ptlens" focal="20.0" a="-0.003704" b="0.008565" c="-0.00498" />
+            <distortion model="ptlens" focal="22.0" a="-0.012484" b="0.040107" c="-0.034334" />
+            <distortion model="ptlens" focal="25.0" a="-0.002521" b="0.013214" c="-0.010094" />
+            <tca model="poly3" focal="10.0" vr="1.0002210" vb="1.0001962" />
+            <tca model="poly3" focal="12.0" vr="1.0002714" vb="1.0001007" />
+            <tca model="poly3" focal="14.0" vr="1.0002366" vb="1.0000960" />
+            <tca model="poly3" focal="17.0" vr="1.0001707" vb="1.0000837" />
+            <tca model="poly3" focal="20.0" vr="1.0001297" vb="1.0000919" />
+            <tca model="poly3" focal="22.0" vr="1.0000495" vb="1.0001474" />
+            <tca model="poly3" focal="25.0" vr="0.9999641" vb="1.0002698" />
+        </calibration>
+    </lens>
+
+    <lens>
+        <maker>Panasonic</maker>
         <model>LEICA DG 100-400/F4.0-6.3</model>
         <model lang="en">Leica DG Vario-Elmar 100-400mm f/4.0-6.3 Asph. Power OIS</model>
         <mount>Micro 4/3 System</mount>
