@@ -26,6 +26,7 @@ New interchangeable lenses:
 * KMZ Industar-50-2 3.5/50
 * KMZ Jupiter-37AM MC 3.5/135
 * Leica DG Vario-Elmarit 8-18mm f/2.8-4 Asph.
+* Leica DG Vario-Summilux 10-25mm f/1.7 Asph.
 * Leica DG Nocticron 42.5mm f/1.2 Asph. Power OIS
 * Nikon AI-S Nikkor 105mm f/2.5
 * Nikon AF-S 200-500mm f/5.6E ED VR
